add java and web

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -279,7 +279,7 @@
 </header>
 
         <div class="article-entry" itemprop="articleBody">
-            <p>一个以混合工程师自居的自封创客。</p>
+            <p>一个以混合工程师自居的多元搬砖工人。</p>
 
         </div>
         <footer class="article-footer">
